src/ui/list-container/list-container.css
.list-container {
  overflow-y: scroll;
  padding-bottom: 1rem;
  width: 100%;
  max-height: 70vh;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.list-container::-webkit-scrollbar {
  width: 0.25rem;
}

.list-container::-webkit-scrollbar-track {
  background-color: var(--gray2);
  -webkit-transition: var(--easeTransition);
  transition: var(--easeTransition);
}

.list-container::-webkit-scrollbar-thumb {
  background-color: var(--accent);
  -webkit-transition: var(--easeTransition);
  transition: var(--easeTransition);
}

